# Tusbina

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  start_backend.sh  start_expo.sh  stop_backend.sh
apps/api/: Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260305_0001_initial_schema.py  20260305_0002_add_quiz_questions.py  20260305_0003_add_user_profiles.py  20260305_0004_add_course_part_audio_url.py  20260306_0005_add_podcast_part_queue_fields.py  20260306_0006_add_podcast_cover_fields.py  20260306_0007_add_user_legal_consents.py  20260308_0008_add_podcast_course_id.py
apps/api/app/: legal_content.py  main.py  worker.py
apps/api/app/api/routes/: auth.py  courses.py  feedback.py  health.py  (+7 more)
apps/api/app/core/: auth.py  build_info.py  config.py  database.py  migrations.py  schema_compat.py
apps/api/app/db/: __init__.py  models.py
apps/api/app/models/: schemas.py
apps/api/app/scripts/: generate_course_audio.py
apps/api/app/services/: __init__.py  bootstrap.py  generation.py  quiz_generation.py  script_generation.py  seed.py  storage.py  tts.py
apps/api/scripts/: benchmark_tts.py  migrate_or_stamp.py  seed_player_e2e_fixture.py  setup_tts.py
apps/api/tests/: conftest.py  test_auth.py  test_contracts.py  test_generation_flow.py  test_health.py  test_migration_bootstrap.py  test_quiz_generation.py  test_script_generation.py  test_tts.py  test_upload_validations.py  test_usage_rules.py  test_user_state_actions.py  test_voice_previews.py
(+112 files in other folders)
