[project]
name = "tusbina-api"
version = "0.2.0"
description = "TUSBINA MVP backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
